--- a/login.html
+++ b/login.html
@@ -17,9 +17,12 @@
                             <div class="mt-2">
                                 <input type="password" class="form-control" placeholder="Password">
                             </div>
+                            <div id="Confirm-Password" class="mt-2 collapse show">
+                                <input type="password" class="form-control" placeholder="Confirm Password">
+                            </div>
                             <div class="mx-4 d-flex justify-content-center">
                                 <button type="submit" class="btn btn-primary btn-md m-2">Login</button>
-                                <button type="submit" class="btn btn-secondary btn-md m-2">Register</button>
+                                <button type="submit" class="btn btn-secondary btn-md m-2" data-toggle="show" data-target="#Confirm-Password">Register</button>
                             </div>
                         </form>
                     </div>
